--- a/DataScienceMeetup_talk_r.ipynb
+++ b/DataScienceMeetup_talk_r.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "setwd(\"//LS-WVL114/share/Ponudbe_predstavitve_marketing/DataScienceMeetup-handsOn - 2016-01-14\")\n",
+    "# setwd(\"//LS-WVL114/share/Ponudbe_predstavitve_marketing/DataScienceMeetup-handsOn - 2016-01-14\")\n",
     "require(randomForest)\n",
     "require(dplyr)\n",
     "require(magrittr)\n",
