Updated Python nbs

--- a/DataScienceMeetup_talk_py.ipynb
+++ b/DataScienceMeetup_talk_py.ipynb
@@ -1038,6 +1038,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.1"
+  },
+  "livereaveal": {
+   "height": 720,
+   "maxScale": 1.5,
+   "minScale": 0.002,
+   "paralaxBackgroundImage": "http://www.ektimo.si/wp-si/wp-content/uploads/2014/05/logo_transparent_white1.png",
+   "start_slideshow_at": "selected",
+   "theme": "serif",
+   "transition": "fade",
+   "width": 1280
   }
  },
  "nbformat": 4,
