--- a/Short presentation.ipynb
+++ b/Short presentation.ipynb
@@ -73,8 +73,7 @@
     "- usability: codefolding, executeTime, latex_envs, limit_output, read_only, search-replace\n",
     "- publishing\n",
     "- styling\n",
-    "- slidemode: reveal.js, RISE - liveReveal\n",
-    "- testing"
+    "- slidemode: reveal.js, RISE - liveReveal"
    ]
   },
   {
@@ -104,7 +103,7 @@
     "\n",
     "And of course you cannot have multiple languages througout the notebook.\n",
     "\n",
-    "For the last remart there exists [Beaker Notebook](http://beakernotebook.com) but there are fewer languages supported and no collaboration at this time."
+    "For the last remark there exists [Beaker Notebook](http://beakernotebook.com) but there are fewer languages supported and no collaboration at this time."
    ]
   },
   {
@@ -119,7 +118,8 @@
     "0. Outdated.\n",
     "    0. Supports only IPython 2.x\n",
     "1. Supports local Jupyter kernels.\n",
-    "2. Single collaborative notebook with multiple (local) kernels."
+    "2. Single collaborative notebook with multiple (local) kernels.\n",
+    "    0. Simultaneous saves give conflicts"
    ]
   },
   {
@@ -135,9 +135,8 @@
     "0. From the authors of coLaboratory\n",
     "1. Itegrates Google drive with Jupyter\n",
     "    0. Jupyter gets access to your Google drive\n",
-    "    1. *.ipynb* is then shared with your teammates via google drive\n",
-    "    2. After a period of time, you are disconnected from drive which causes loss of code\n",
-    "2. Same time saves produce conflicts"
+    "    1. After a period of time, you are disconnected from drive which causes loss of code\n",
+    "2. Same-time saves produce conflicts"
    ]
   },
   {
@@ -154,9 +153,9 @@
     "1. One server for all users\n",
     "    0. Authentication\n",
     "    1. Same kernels per user\n",
-    "    2. No build-in support for sharing notebooks (except drive and shared folders on server)\n",
-    "    3. Possible problems with resources (CPU, RAM sharing)\n",
-    "2. Certificates for security reasons"
+    "    2. No build-in support for sharing notebooks (except drive and shared folders for users on server)\n",
+    "    3. Good for computing on remote machine\n",
+    "    3. Possible problems with resources (CPU, RAM sharing)"
    ]
   },
   {
@@ -169,8 +168,8 @@
    "source": [
     "##### Local + git\n",
     "\n",
-    "0. Versioning with git, svn, etc.\n",
-    "1. Only local kernels\n",
+    "0. Only local kernels\n",
+    "1. Versioning with git, svn, etc.\n",
     "2. Git resolves conflicts since *.ipynb* is JSON - **Note: Beware of only one line in whole nb**"
    ]
   },
