Final v3 - live presentation

--- a/Short presentation.ipynb
+++ b/Short presentation.ipynb
@@ -12,6 +12,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'R workdir: /home/rok/dl/github/dsm'"
+      ],
+      "text/latex": [
+       "'R workdir: /home/rok/dl/github/dsm'"
+      ],
+      "text/markdown": [
+       "'R workdir: /home/rok/dl/github/dsm'"
+      ],
+      "text/plain": [
+       "[1] \"R workdir: /home/rok/dl/github/dsm\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paste(\"R workdir\", getwd(), sep=\": \")\n",
+    "#import os\n",
+    "#os.getcwd()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,7 +139,8 @@
     "\n",
     "And of course you cannot have multiple languages througout the notebook.\n",
     "\n",
-    "For the last remark there exists [Beaker Notebook](http://beakernotebook.com) but there are fewer languages supported and no collaboration at this time."
+    "For the last remark there exists [Beaker Notebook](http://beakernotebook.com) but there are fewer languages <br />\n",
+    "supported and no collaboration at this time."
    ]
   },
   {
@@ -153,7 +190,7 @@
     "1. One server for all users\n",
     "    0. Authentication\n",
     "    1. Same kernels per user\n",
-    "    2. No build-in support for sharing notebooks (except drive and shared folders for users on server)\n",
+    "    2. No build-in support for sharing notebooks (except drive and shared <br />folders for users on server)\n",
     "    3. Good for computing on remote machine\n",
     "    3. Possible problems with resources (CPU, RAM sharing)"
    ]
